--- a/style.css
+++ b/style.css
@@ -8,18 +8,32 @@ h2 {
     font-size:  24px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    color: red;
+    animation-name: example;
+    animation-duration: 10s;
+
+}
+
+h3 {
+  font-size:  20px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align:left;
+  color: black;
+
 }
 
 .firstpara {
     color:blue;
-    font-size: 20px;
+    font-size: 24px;
     text-align: center;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif  ;
 }
 
 .secondpara {
     color: #333333;
-    font-size: 16px;
-    text-align: justify;
+    font-size: 24px;
+    text-align: center;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif  ;
 }
 
 .column {
@@ -29,21 +43,14 @@ h2 {
     padding: 0 8px;
    }
   
-  /* Display the columns below each other instead of side by side on small screens */
-  @media screen and (max-width: 650px) {
-    .column {
-      width: 100%;
-      display: block;
-    }
-  }
   
-  /* Add some shadows to create a card effect */
+
   .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     background-color: rgb(234, 173, 124);
   }
   
-  /* Some left and right padding inside the container */
+
   .container {
     padding: 0 16px;
   }
@@ -70,6 +77,9 @@ h2 {
     text-align: center;
     cursor: pointer;
     width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    
+    
   }
   
   .button:hover {
@@ -108,4 +118,25 @@ h2 {
     color:rgb(4, 4, 15);
     font-size: 20px;
     text-align: center;
+}
+
+.imagerow {
+  display: flex;
+}
+
+.imagecolumn {
+  flex: 50%;
+  padding: 5px;
+}
+
+.intro {
+  background-color: aqua;
+
+}
+
+@keyframes example {
+  0%   {color: red;}
+  25%  {color: yellow;}
+  50%  {color: blue;}
+  100% {color: green;}
 }
