--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ h1 {
     font-size:  28px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    color:  blue; 
 }
 
 h2 {
@@ -107,6 +108,12 @@ h3 {
     color: white;
   }
 
+  .submit {
+    background-color: #04AA6D;
+    color: white;
+    font-size: 24px;
+  }
+
   .center {
     display: block;
     margin-left: auto;
@@ -140,3 +147,9 @@ h3 {
   50%  {color: blue;}
   100% {color: green;}
 }
+
+ .third { 
+  width: 33.33%; 
+  float: left;
+  background-color: rgb(33, 150, 101);
+ } 
